src/2 - ABI/NOTAS
23pez@UbuntuUba:~/Facultad/guia-ASM/src/2 - ABI$ make
cc -std=c11 -Wall -Wextra -pedantic -O0 -g -lm -Wno-unused-variable -Wno-unused-parameter -no-pie -z noexecstack -I ../ -c main.c -o main.o
In file included from main.c:7:
../test-utils.h:106:13: warning: ‘print_double’ defined but not used [-Wunused-function]
  106 | static void print_double(double v)     { printf("%.2f", v); }
      |             ^~~~~~~~~~~~
../test-utils.h:105:13: warning: ‘print_float’ defined but not used [-Wunused-function]
  105 | static void print_float(float v)       { printf("%.2f", v); }
      |             ^~~~~~~~~~~
../test-utils.h:104:13: warning: ‘print_string’ defined but not used [-Wunused-function]
  104 | static void print_string(char* v)      { printf("%s",   v); }
      |             ^~~~~~~~~~~~
../test-utils.h:103:13: warning: ‘print_uint32_t’ defined but not used [-Wunused-function]
  103 | static void print_uint32_t(uint32_t v) { printf("%u",   v); }
      |             ^~~~~~~~~~~~~~
../test-utils.h:102:13: warning: ‘print_int32_t’ defined but not used [-Wunused-function]
  102 | static void print_int32_t(int32_t v)  { printf("%d",   v); }
      |             ^~~~~~~~~~~~~
nasm -f elf64 -g -F DWARF ABI.asm -o ABI_asm.o
ABI.asm:219: error: invalid combination of opcode and operands
make: *** [Makefile:35: ABI_asm.o] Error 1
23pez@UbuntuUba:~/Facultad/guia-ASM/src/2 - ABI$ ./runTester.sh

** Compilando
cc -std=c11 -Wall -Wextra -pedantic -O0 -g -lm -Wno-unused-variable -Wno-unused-parameter -no-pie -z noexecstack -I ../ -c tester.c -o tester.o
nasm -f elf64 -g -F DWARF ABI.asm -o ABI_asm.o
ABI.asm:219: error: invalid combination of opcode and operands
make: *** [Makefile:35: ABI_asm.o] Error 1
  ** Error de compilacion